# bank-account-api-python

./: .gitignore  .mcp.json  README.md  package-lock.json
.specify/memory/: constitution.md
bank-account-api-py/: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
bank-account-api-py/app/: main.py
bank-account-api-py/app/bank_account/: controller.py  model.py  service.py
bank-account-api-py/app/prime/: controller.py  service.py
bank-account-api-py/tests/e2e/: test_bank_account_e2e.py
bank-account-api-py/tests/unit/: test_bank_account_controller.py  test_bank_account_model.py  test_bank_account_service.py  test_prime_service.py
bank-account-ui/: package-lock.json
training/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
training/checklists/: requirements.md
training/contracts/: total-balance-api.yaml
